Harden interrupted waits and cleanup
Waiting primitives now consume interrupts before parking.

They restore the interrupt flag when each operation exits.

CPU-time tests distinguish blocking from interrupt-driven spins.

Cleanup paths preserve WAL locks, log cursors, and timer progress.

Lifecycle shutdown now drains work before releasing resources.

Metric scopes restore JVM-wide settings after each test.

Rust sleep chunks long durations at platform-safe boundaries.